Adding log messages

--- a/static-analysis/action.yml
+++ b/static-analysis/action.yml
@@ -51,13 +51,15 @@ runs:
     - name: Run yarn if package.json exists in module folder
       shell: bash
       run: |
+        echo "Run yarn if package.json exists in module folder: ${{ inputs.module_path }}"
         if [[ -d ${{ inputs.module_path }} && -e "${{ inputs.module_path }}package.json" ]]; then
           cd ${{ inputs.module_path }}
           yarn
         fi
-    - name: Run yarn if package.json exists in module folder
+    - name: Run yarn if package.json exists in tests folder
       shell: bash
       run: |
+        echo "Run yarn if package.json exists in tests folder: ${{ inputs.tests_path }}"
         if [[ -d ${{ inputs.tests_path }} && -e "${{ inputs.tests_path }}package.json" ]]; then
           cd ${{ inputs.tests_path }}
           yarn
@@ -68,6 +70,7 @@ runs:
       if: ${{ !inputs.skip_lint_modules }}
       shell: bash
       run: |
+        echo "Lint module (javascript only)"      
         if [[ -d ${{ inputs.module_path }} && -e "${{ inputs.module_path }}package.json" ]]; then
           cd ${{ inputs.module_path }}
           yarn run lint --max-warnings ${{ inputs.max_warning }}
@@ -76,6 +79,7 @@ runs:
       if: ${{ !inputs.skip_lint_tests }}
       shell: bash
       run: |
+        echo "Lint tests (javascript only)"
         if [[ -d ${{ inputs.tests_path }} && -e "${{ inputs.tests_path }}package.json" ]]; then
           cd ${{ inputs.tests_path }}
           yarn run lint --max-warnings ${{ inputs.max_warning }}
@@ -85,11 +89,13 @@ runs:
     - name: Install audit-ci
       shell: bash
       run: |
+        echo "Install audit-ci"
         sudo npm install -g audit-ci
     - name: Audit-ci module (javascript only)
       if: ${{ !inputs.skip_vulns_modules }}
       shell: bash
       run: |
+        echo "Scan javascript vulnerabilities in the module with audit-ci"
         if [[ -d ${{ inputs.module_path }} && -e "${{ inputs.module_path }}package.json" ]]; then
           cd ${{ inputs.module_path }}
           audit-ci --skip-dev --${{ inputs.auditci_level }}
@@ -98,6 +104,7 @@ runs:
       if: ${{ !inputs.skip_vulns_tests }}
       shell: bash
       run: |
+        echo "Scan javascript vulnerabilities in the tests with audit-ci"
         if [[ -d ${{ inputs.tests_path }} && -e "${{ inputs.tests_path }}package.json" ]]; then
           cd ${{ inputs.tests_path }}
           audit-ci --${{ inputs.auditci_level_tests }}
