--- a/static-analysis/action.yml
+++ b/static-analysis/action.yml
@@ -59,64 +59,72 @@ runs:
     - name: Run yarn if package.json exists in module folder
       shell: bash
       run: |
-        echo "Run yarn if package.json exists in module folder: ${{ inputs.module_path }}"
+        echo "::group::Run yarn if package.json exists in module folder: ${{ inputs.module_path }}"
         if [[ -d ${{ inputs.module_path }} && -e "${{ inputs.module_path }}package.json" ]]; then
           cd ${{ inputs.module_path }}
           yarn
         fi
+        echo "::endgroup::"
     - name: Run yarn if package.json exists in tests folder
       shell: bash
       run: |
-        echo "Run yarn if package.json exists in tests folder: ${{ inputs.tests_path }}"
+        echo "::group::Run yarn if package.json exists in tests folder: ${{ inputs.tests_path }}"
         if [[ -d ${{ inputs.tests_path }} && -e "${{ inputs.tests_path }}package.json" ]]; then
           cd ${{ inputs.tests_path }}
           yarn
         fi
+        echo "::endgroup::"
 
     # Lint the codebase
     - name: Lint module (javascript only)
       if: ${{ inputs.skip_lint_modules == 'false' }}
       shell: bash
       run: |
-        echo "Lint module (javascript only)"      
+        echo "::group::Lint module (javascript only)"      
         if [[ -d ${{ inputs.module_path }} && -e "${{ inputs.module_path }}package.json" ]]; then
           cd ${{ inputs.module_path }}
           yarn run lint --max-warnings ${{ inputs.max_warning }}
         fi
+        echo "::endgroup::"
     - name: Lint tests (javascript only)
       if: ${{ inputs.skip_lint_tests == 'false' }}
       shell: bash
       run: |
-        echo "Lint tests (javascript only)"
+        echo "::group::Lint tests (javascript only)"
         if [[ -d ${{ inputs.tests_path }} && -e "${{ inputs.tests_path }}package.json" ]]; then
           cd ${{ inputs.tests_path }}
           yarn run lint --max-warnings ${{ inputs.max_warning }}
         fi
+        echo "::endgroup::"
 
     # Runs the security checks
     - name: Install audit-ci
       shell: bash
       run: |
+        echo "::group::Install audit-ci"     
         echo "Install audit-ci"
         sudo npm install -g audit-ci
+        echo "::endgroup::"
     - name: Audit-ci module (javascript only)
       if: ${{ inputs.skip_vulns_modules == 'false' }}
       shell: bash
       run: |
-        echo "Scan javascript vulnerabilities in the module with audit-ci"
+        echo "::group::Scan javascript vulnerabilities in the module with audit-ci"
         if [[ -d ${{ inputs.module_path }} && -e "${{ inputs.module_path }}package.json" ]]; then
           cd ${{ inputs.module_path }}
           audit-ci --skip-dev --${{ inputs.auditci_level }}
         fi
+        echo "::endgroup::"
     - name: Audit-ci tests (javascript only)
       if: ${{ inputs.skip_vulns_tests == 'false' }}
       shell: bash
       run: |
-        echo "Scan javascript vulnerabilities in the tests with audit-ci"
+        echo "::group::Scan javascript vulnerabilities in the tests with audit-ci"
         if [[ -d ${{ inputs.tests_path }} && -e "${{ inputs.tests_path }}package.json" ]]; then
           cd ${{ inputs.tests_path }}
           audit-ci --${{ inputs.auditci_level_tests }}
         fi
+        echo "::endgroup::"
 
     # Depcheck the codebase
     - name: Depcheck module (javascript only)
