--- a/docker-images-cleanup/action.yml
+++ b/docker-images-cleanup/action.yml
@@ -15,7 +15,7 @@ inputs:
   docker_delete_token:
     description: "Docker registry (i.e. Docker Hub) token. Requires read/write/delete access"
     required: true
-  dry-run:
+  dry_run:
     description: "Dry Run: Does not push changes if true"
     default: true
 
