--- a/dependencies-get-unused-java/action.yml
+++ b/dependencies-get-unused-java/action.yml
@@ -8,6 +8,9 @@ inputs:
   github_token:
     description: 'Github token'
     required: true
+  root_folder:
+    description: 'Change the root folder'
+    default: "./"
 
 runs:
   using: "composite"
@@ -30,7 +33,7 @@ runs:
       if: always()
       uses: rknj/html2markdown@v1.0.0
       with:
-        html-file: "target/dependency-analysis.html"
+        html-file: "${{ inputs.root_folder }}target/dependency-analysis.html"
 
     - name: Clean up markdown
       if: always()
