--- a/dependencies-get-new-versions-java/action.yml
+++ b/dependencies-get-new-versions-java/action.yml
@@ -40,7 +40,7 @@ runs:
       shell: bash
       run: |
         echo "TODAY=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
-        grep -Eiv "^.*Dependency Updates Report|.*This report summarizes|.*Overview|.*# of dependencies|.*Last Published|.*Built by Maven|.*©|.*\* \* \*" ${{ steps.html2markdown-new-versions.outputs.markdown-file }} > maven-report-updated.md || true
+        grep -Eiv "^.*Dependency Updates.*|.*This report summarizes|.*Overview|.*# of dependencies|.*Last Published|.*Built by Maven|.*©|.*\* \* \*|.*### .+:.+|.*bodyTable.*" ${{ steps.html2markdown-new-versions.outputs.markdown-file }} > maven-report-updated.md || true
         echo 'MARKDOWN_NEW_VERSIONS<<EOF' >> $GITHUB_ENV
         cat maven-report-updated.md >> $GITHUB_ENV
         echo 'EOF' >> $GITHUB_ENV
