--- a/dependencies-get-unused-java/action.yml
+++ b/dependencies-get-unused-java/action.yml
@@ -26,7 +26,7 @@ runs:
       if: always()
       shell: bash
       run: |
-        mvn dependency:analyze-report -Dscope=runtime --no-transfer-progress
+        mvn dependency:analyze-report -DignoreNonCompile=true --no-transfer-progress
 
     - name: Convert HTML to Markdown
       id: html2markdown
