--- a/dependencies-get-new-versions-java/action.yml
+++ b/dependencies-get-new-versions-java/action.yml
@@ -8,6 +8,9 @@ inputs:
   github_token:
     description: 'Github token'
     required: true
+  root_folder:
+    description: 'Change the root folder'
+    default: "."
 
 runs:
   using: "composite"
@@ -30,14 +33,14 @@ runs:
       if: always()
       uses: rknj/html2markdown@v1.0.0
       with:
-        html-file: "target/site/dependency-updates-report.html"
+        html-file: "${{ inputs.root_folder }}/target/site/dependency-updates-report.html"
 
     - name: Clean up markdown
       if: always()
       shell: bash
       run: |
         echo "TODAY=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
-        grep -Eiv "^.*Dependency Updates Report|.*This report summarizes|.*Overview|.*# of dependencies|.*Last Published|.*Built by Maven|.*©|.*\* \* \*" ${{ steps.html2markdown-new-versions.outputs.markdown-file }} > maven-report-updated.md || true
+        grep -Eiv "^.*Dependency Updates.*|.*This report summarizes|.*Overview|.*# of dependencies|.*Last Published|.*Built by Maven|.*©|.*\* \* \*|.*### .+:.+|.*bodyTable.*" ${{ steps.html2markdown-new-versions.outputs.markdown-file }} > maven-report-updated.md || true
         echo 'MARKDOWN_NEW_VERSIONS<<EOF' >> $GITHUB_ENV
         cat maven-report-updated.md >> $GITHUB_ENV
         echo 'EOF' >> $GITHUB_ENV
