--- a/dependencies-check-java/action.yml
+++ b/dependencies-check-java/action.yml
@@ -21,7 +21,7 @@ runs:
       shell: bash
       run: |
         curl -H "Accept: application/vnd.github+json" -H "Authorization: token ${{ inputs.github_token }}" https://api.github.com/repos/${{ github.repository }}/contents/${{ inputs.root_folder }}/pom.xml | jq -r ".content" > base64_file
-        pom_content=$(grep "null" base64_file)
+        pom_content=$(grep "null" base64_file) || status=$?
         if [[ $pom_content != "null" ]]; then
           echo "BASE_POM_NOT_FOUND=1" >> $GITHUB_ENV
           echo "Base POM not found"
