TECH-1064 - Add missing usages of the root folder parameter

--- a/dependencies-get-new-versions-java/action.yml
+++ b/dependencies-get-new-versions-java/action.yml
@@ -26,7 +26,7 @@ runs:
       if: always()
       shell: bash
       run: |
-        mvn versions:dependency-updates-report -DonlyUpgradable=true -DprocessDependencyManagementTransitive=false --no-transfer-progress
+        mvn -f ${{ inputs.root_folder }}/pom.xml versions:dependency-updates-report -DonlyUpgradable=true -DprocessDependencyManagementTransitive=false --no-transfer-progress
 
     - name: Convert HTML to Markdown
       id: html2markdown-new-versions
