--- a/dependencies-get-new-versions-java/action.yml
+++ b/dependencies-get-new-versions-java/action.yml
@@ -50,7 +50,7 @@ runs:
       uses: dacbd/create-issue-action@v1.2.0
       with:
         token: ${{ inputs.github_token }}
-        title: Maven dependency report (new versions available) - ${{ env.TODAY }}
+        title: Maven dependency report (new versions available) - Folder ${{ inputs.root_folder }} - ${{ env.TODAY }}
         body: |
           Report from [${{ github.workflow }}](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
           ${{ env.MARKDOWN_NEW_VERSIONS }}
