TECH-1064 - Move folder info into the description

--- a/dependencies-get-unused-java/action.yml
+++ b/dependencies-get-unused-java/action.yml
@@ -50,9 +50,10 @@ runs:
       uses: dacbd/create-issue-action@v1.2.0
       with:
         token: ${{ inputs.github_token }}
-        title: Maven dependency report (unused dependencies) - Folder ${{ inputs.root_folder }} - ${{ env.TODAY }}
+        title: Maven dependency report (unused dependencies) - ${{ env.TODAY }}
         body: |
           Report from [${{ github.workflow }}](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
+          Analysed folder: ${{ inputs.root_folder }}
           ${{ env.MARKDOWN_UNUSED }}
         assignees: ${{ inputs.default_issue_assignee }}
 
